sort.basic.bubble.AlgBubbleSort3.scala.error
Erreur de compilation :
AlgBubbleSort3:11: error: not found: value j
        echange(j,j-1);
                ^AlgBubbleSort3:11: error: not found: value j
        echange(j,j-1);
                  ^AlgBubbleSort3:17: error: not found: value break
  if(!permute) break;
               ^